SERVER-10420 Trying to fix jstests/sharding/replmonitor_bad_seed.js